force-app/main/default/objects/Person360Muting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>On/Off Settings for Person360</description>
    <fields>
        <fullName>ContactPointBatch__c</fullName>
        <defaultValue>50</defaultValue>
        <description>ContactPoint Batching Amount</description>
        <inlineHelpText>ContactPoint Batching Amount</inlineHelpText>
        <label>ContactPointBatch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EnableChannelBreakUp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>On/Off toggle for Channel Break up to ( Address__c, Email__c, Phone__c)</description>
        <inlineHelpText>On/Off toggle for Channel Break up to ( Address__c, Email__c, Phone__c)</inlineHelpText>
        <label>Enable Channel Break Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Force_Rolldown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting forces a write of the Contact details to the Contact Point object (Address, Email, Phone) even if the values have not changed on the Contact. It represents a forced roll-down. This is useful for an initial population of the Contact Point objects.</description>
        <inlineHelpText>Please indicate whether you want to force a write as part of the roll-down even though the Contact details have not been changed.</inlineHelpText>
        <label>Enable Force Rolldown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Force_Rollup_PFN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Force a Name rollup if a preferred first name is present. It is possible for a contact to be updated that does not produce a different rolldown result, however, a rollup is still required - Staff Updates.</description>
        <inlineHelpText>Force a Name rollup if a preferred first name is present</inlineHelpText>
        <label>Enable Force Rollup PFN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Force_Rollup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Force a rollup to occur even if no change is detected on the contact point</description>
        <inlineHelpText>Force a rollup to occur even if no change is detected on the contact point</inlineHelpText>
        <label>Enable Force Rollup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Roll_Down__c</fullName>
        <defaultValue>false</defaultValue>
        <description>On/Off toggle the Roll Down Logic for Person360 (Contact to Name__c, Address__c, Email__c, Phone__c)</description>
        <inlineHelpText>On/Off toggle the Roll Down Logic for Person360 (Contact to Name__c, Address__c, Email__c, Phone__c)</inlineHelpText>
        <label>Enable Roll Down</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Roll_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <description>On/Off toggle the Roll Up Logic for Person360 (Name__c or Address__c or Email__c or Phone__c to Contact)</description>
        <inlineHelpText>On/Off toggle the Roll Up Logic for Person360 (Name__c or Address__c or Email__c or Phone__c to Contact)</inlineHelpText>
        <label>Enable Roll Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_Roll_Down_Bypass__c</fullName>
        <label>Name Roll Down Bypass</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Roll_Down_Bypass__c</fullName>
        <description>A comma-separated list of contact.Record_Type_Developer_Name__c that should not initiate a rolldown.
Limitation: Any contacts created without a RT value assigned will rolldown. This includes contacts created from Callista and the webservices.</description>
        <inlineHelpText>A comma-separated list of contact.Record_Type_Developer_Name__c that should not initiate a rolldown</inlineHelpText>
        <label>Record Type Roll Down Bypass</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relax_Rollup_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A tactical switch to force rollup to occur as a result of rolldown</description>
        <inlineHelpText>Stops rollup from being bypassed during rolldown</inlineHelpText>
        <label>Relax Rollup Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Run_Roll_Up_Asynchronously__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator if Roll up will run asynchronous or synchronous. If checked, roll up will run asynchronously. If unchecked, roll up will run synchronously</description>
        <label>Run Roll Up Asynchronously</label>
        <type>Checkbox</type>
    </fields>
    <label>Person360Muting</label>
</CustomObject>